Commit after relationship depart/deprotat

--- a/src/main/webapp/app/entities/depart/detail/depart-detail.component.html
+++ b/src/main/webapp/app/entities/depart/detail/depart-detail.component.html
@@ -56,11 +56,11 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deheups">Deheups</span></dt>
         <dd>
-          <span>{{ depart.deheups | formatMediumDatetime }}</span>
+          <span>{{ depart.deheups | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deheufs">Deheufs</span></dt>
         <dd>
-          <span>{{ depart.deheufs | formatMediumDatetime }}</span>
+          <span>{{ depart.deheufs | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.denbrro">Denbrro</span></dt>
         <dd>
@@ -68,19 +68,19 @@
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deheuaa">Deheuaa</span></dt>
         <dd>
-          <span>{{ depart.deheuaa | formatMediumDatetime }}</span>
+          <span>{{ depart.deheuaa | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deheudr">Deheudr</span></dt>
         <dd>
-          <span>{{ depart.deheudr | formatMediumDatetime }}</span>
+          <span>{{ depart.deheudr | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deheupd">Deheupd</span></dt>
         <dd>
-          <span>{{ depart.deheupd | formatMediumDatetime }}</span>
+          <span>{{ depart.deheupd | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.deampli">Deampli</span></dt>
         <dd>
-          <span>{{ depart.deampli | formatMediumDatetime }}</span>
+          <span>{{ depart.deampli | formatMediumDate }}</span>
         </dd>
         <dt><span jhiTranslate="departdbApp.depart.obsind">Obsind</span></dt>
         <dd>
