--- a/src/main/webapp/app/entities/deprotat/list/deprotat.component.html
+++ b/src/main/webapp/app/entities/deprotat/list/deprotat.component.html
@@ -254,6 +254,12 @@
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
+          <th scope="col" jhiSortBy="depart.id">
+            <div class="d-flex">
+              <span jhiTranslate="departdbApp.deprotat.depart">Depart</span>
+              <fa-icon class="p-1" icon="sort"></fa-icon>
+            </div>
+          </th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -278,10 +284,10 @@
           <td>{{ deprotat.matric }}</td>
           <td>{{ deprotat.matric1 }}</td>
           <td>{{ deprotat.cdmac }}</td>
-          <td>{{ deprotat.hdeparte | formatMediumDatetime }}</td>
-          <td>{{ deprotat.hretoure | formatMediumDatetime }}</td>
-          <td>{{ deprotat.harralle | formatMediumDatetime }}</td>
-          <td>{{ deprotat.harrrete | formatMediumDatetime }}</td>
+          <td>{{ deprotat.hdeparte | formatMediumDate }}</td>
+          <td>{{ deprotat.hretoure | formatMediumDate }}</td>
+          <td>{{ deprotat.harralle | formatMediumDate }}</td>
+          <td>{{ deprotat.harrrete | formatMediumDate }}</td>
           <td>{{ deprotat.rannul }}</td>
           <td>{{ deprotat.km }}</td>
           <td>{{ deprotat.motifa }}</td>
@@ -298,6 +304,11 @@
           <td>{{ deprotat.plusmoins }}</td>
           <td>{{ deprotat.a }}</td>
           <td>{{ deprotat.r }}</td>
+          <td>
+            <div *ngIf="deprotat.depart">
+              <a [routerLink]="['/depart', deprotat.depart.id, 'view']">{{ deprotat.depart.id }}</a>
+            </div>
+          </td>
           <td class="text-end">
             <div class="btn-group">
               <button
@@ -329,23 +340,5 @@
         </tr>
       </tbody>
     </table>
-  </div>
-
-  <div *ngIf="deprotats && deprotats.length > 0">
-    <div class="d-flex justify-content-center">
-      <jhi-item-count [params]="{ page: page, totalItems: totalItems, itemsPerPage: itemsPerPage }"></jhi-item-count>
-    </div>
-
-    <div class="d-flex justify-content-center">
-      <ngb-pagination
-        [collectionSize]="totalItems"
-        [page]="page"
-        [pageSize]="itemsPerPage"
-        [maxSize]="5"
-        [rotate]="true"
-        [boundaryLinks]="true"
-        (pageChange)="navigateToPage($event)"
-      ></ngb-pagination>
-    </div>
   </div>
 </div>
